--- a/Server/static/css/style.css
+++ b/Server/static/css/style.css
@@ -1,9 +1,9 @@
-.welcome_text {
-  font-size: 25px;
+.text {
+  font-size: 18px;
 }
 
-.info_header_text {
-  font-size: 25px;
+.main_text {
+  font-size: 25px
 }
 
 .further_information {
