--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -40,27 +40,27 @@
 <body>
   <header class="w3-bar w3-light-green">
   	<img src="static/img/logo.svg" class="w3-image" width="200" height="200">
-  	<span class="welcome_text">taxameter.ru</span>
+  	<span class="main_text">taxameter.ru</span>
   	<span onclick="switch_lang()" class="w3-right w3-button">{{lang_sw}}</span>
   </header>
 
 
   <div class="w3-row w3-margin w3-padding">
     <div class="w3-col w3-row">
-      <div class="w3-col l10 m10">{{welcome_text}}</div>
-      <div class="w3-right w3-col l2 m2  w3-container">
+      <div class="w3-col text" style="width:70%">{{welcome_text}}</div>
+      <div class="w3-right text" style="width:20%">
         <p>{{together_text}} <a href="https://corgi.center/">&#60;CoRGI&#62;</a></p>
         <p>{{enabled_text}} <a href="https://www.gisaid.org/">&#60;GISAID&#62;</a></p>
         <p>{{last_update_text}}</p>
       </div>
     </div>
-    <p class="w3-strong info_header_text">
+    <p class="w3-strong main_text">
       {{mutation_info_header}}
     </p>
     <div class="w3-row w3-light-green w3-col l3 m3">
         <div onclick="home()" class="w3-margin w3-btn w3-col w3-theme-d5 my-btn">{{home_button_text}}</div>
-        <div class="section">
-        <p class="w3-strong w3-margin">
+        <div class="w3-section w3-padding-24">
+        <p class="w3-strong w3-margin text">
           {{variables_text}}
         </p>
         <div class="w3-container w3-padding w3-light-green w3-dropdown-click w3-col">
@@ -77,7 +77,7 @@
             <p style="display:inline;" id="mutationNameDropdownButtonText"></p>
           </button>
         </div>
-        <p class="w3-strong w3-margin">
+        <p class="w3-strong w3-margin text">
           {{example_text}}
           <a href="/?mutation=lineage:B.1.1.7&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Alpha (B.1.1.7)</a>,
           <a href="/?mutation=lineage:B.1.351&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Beta (B.1.351)</a>,
@@ -86,8 +86,8 @@
           <a href="/?mutation=N:A211V&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">N:A211V</a>
         </p>
       </div>
-      <div class="w3-section">
-        <p class="w3-strong w3-margin w3-margin-top w3-margin-bottom">
+      <div class="w3-section w3-padding-24">
+        <p class="w3-strong w3-margin w3-margin-top w3-margin-bottom text">
           {{date_slider_text}}
         </p>
         <div class="w3-container w3-padding w3-col">
@@ -98,7 +98,7 @@
         </div>
       </div>
       	<div onclick="outbreakInfoLink('{{outbreak_info_link}}')" class="w3-margin w3-btn w3-col further_information w3-theme-d5 my-btn" id="updateDate">
-          <p style="display:inline;">{{further_information_text}} {{mutation}}</p>
+          <p style="display:inline;">{{further_information_text}} {{mutation}}  {{resourses_text}}</p>
         </div>
       </div>
     <div class="w3-col l9 m9">
@@ -109,9 +109,9 @@
   </div>
 
   <footer class="w3-container w3-padding-64 w3-center w3-opacity">
-    <div class="w3-xlarge w3-padding-32">
+    <div class="text w3-padding-32">
       <p>{{definition_begining_text}} <a href="https://faculty.skoltech.ru/people/georgiibazykin">{{lab_name_text}}</a> {{definition_end_text}}</p>
-      <p><a href="">{{DK_name_text}}</a>, <a href="">{{EN_name_text}}</a>, <a href="">{{SG_name_text}}</a>, <a href="https://twitter.com/gbazykin">{{GB_name_text}}</a></p>
+      <p><a href="">{{DK_name_text}}</a>, <a href="">{{EN_name_text}}</a>, <a href="https://twitter.com/garushyants">{{SG_name_text}}</a>, <a href="https://twitter.com/gbazykin">{{GB_name_text}}</a></p>
       <p>{{questions_text}}</p>
       <p>{{cite_text}}</p>
    </div>
