--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -46,7 +46,7 @@
 
 
   <div class="w3-row w3-margin w3-padding">
-    <div class="w3-col w3-row">
+    <div class="w3-col w3-row w3-padding-24 w3-section">
       <div class="w3-col text" style="width:70%">{{welcome_text}}</div>
       <div class="w3-right text" style="width:20%">
         <p>{{together_text}} <a href="https://corgi.center/">&#60;CoRGI&#62;</a></p>
@@ -54,7 +54,7 @@
         <p>{{last_update_text}}</p>
       </div>
     </div>
-    <p class="w3-strong main_text">
+    <p class="w3-strong main_text w3-padding-12 w3-section">
       {{mutation_info_header}}
     </p>
     <div class="w3-row w3-light-green w3-col l3 m3">
@@ -86,7 +86,7 @@
           <a href="/?mutation=N:A211V&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">N:A211V</a>
         </p>
       </div>
-      <div class="w3-section w3-padding-24">
+      <div class="w3-section w3-padding-12">
         <p class="w3-strong w3-margin w3-margin-top w3-margin-bottom text">
           {{date_slider_text}}
         </p>
