--- a/Server/static/css/style.css
+++ b/Server/static/css/style.css
@@ -6,6 +6,10 @@
   font-size: 25px
 }
 
+.logo_text {
+  font-size: 45px
+}
+
 .further_information {
     white-space: normal;
     font-size: medium;
