--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -40,7 +40,7 @@
 <body>
   <header class="w3-bar w3-light-green">
   	<img src="static/img/logo.svg" class="w3-image" width="200" height="200">
-  	<span class="main_text">taxameter.ru</span>
+  	<span class="logo_text">taxameter.ru</span>
   	<span onclick="switch_lang()" class="w3-right w3-button">{{lang_sw}}</span>
   </header>
 
