--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -49,8 +49,8 @@
     <div class="w3-col w3-row w3-padding-24 w3-section">
       <div class="w3-col text" style="width:70%">{{welcome_text}}</div>
       <div class="w3-right text" style="width:20%">
-        <p>{{together_text}} <a href="https://corgi.center/">CoRGI</a></p>
-        <p>{{enabled_text}} <a href="https://www.gisaid.org/">GISAID</a></p>
+        <p>{{together_text}} <a  href="https://corgi.center/"> <img height="20" src="/static/img/corgi.svg"></img></a></p>
+        <p>{{enabled_text}} <a href="https://www.gisaid.org/"> <img height="20" src="/static/img/gisaid.svg"></img></a></p>
         <p>{{last_update_text}}</p>
       </div>
     </div>
