embed bug fixed

--- a/Server/templates/embed.html
+++ b/Server/templates/embed.html
@@ -23,7 +23,7 @@
           html,body,h1,h2,h3,h4,h5,h6 {font-family: "Open Sans", sans-serif;}
           </style>
           <link rel="stylesheet" href="/static/css/style.css">
-          <script src="/static/js/script.js"></script>
+          <script src="/static/js/embed_script.js"></script>
           {{ bokeh_css | indent(8) if bokeh_css }}
           {% endblock %}
 
