--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -24,6 +24,7 @@
         </style>
         <link rel="stylesheet" href="/static/css/style.css">
         <script src="/static/js/script.js"></script>
+        <script src="https://www.w3counter.com/tracker.js?id=138091"></script>
         {{ bokeh_css | indent(8) if bokeh_css }}
         {% endblock %}
 
