--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -75,7 +75,7 @@
           <div id="gene" class="w3-dropdown-content w3-bar-block w3-border" style="max-height:250px; overflow:auto;"></div>
         </div>
         <div class="w3-container w3-padding w3-light-green w3-dropdown-click w3-col" id="mutation">
-          <button class="w3-btn w3-black w3-black my-btn" id="mutationDropdownButton" style="min-width: 100%">
+          <button class="w3-btn w3-black my-btn" id="mutationDropdownButton" style="min-width: 100%">
             <p style="display:inline;">{{mutation_choice_button_text}}</p>
             <p style="display:inline;" id="mutationDropdownButtonText"></p>
             <p style="display:inline;" id="mutationNameDropdownButtonText"></p>
