--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -143,6 +143,9 @@
         <div class="w3-border">
           <div id="coronamap"></div>
         </div>
+        <div class="w3-border">
+          <div id="coronaplot"></div>
+        </div>
       </div>
     </div>
   </div>
