home button text problem solved

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -72,8 +72,8 @@
       <div class="w3-col w3-row w3-light-green w3-section w3-round-large">
         <div class="w3-row w3-col l3">
           <div class="w3-section w3-padding-24 w3-col">
-            <div onclick="home()" class="w3-margin w3-btn w3-col w3-theme-d5 my-btn">
-              <p style="display:inline;">{{home_button_text}}</p>
+            <div onclick="home()" class="w3-margin w3-btn w3-col further_information w3-theme-d5 my-btn">
+              <p style="display:inline;"> {{home_button_text}} </p>
             </div>
             <div onclick="outbreakInfoLink('{{outbreak_info_link}}')" class="w3-margin w3-btn w3-col further_information w3-theme-d5 my-btn" id="updateDate">
               <p style="display:inline;">{{further_information_text}} {{mutation}}  {{resourses_text}}</p>
