Plot names added

--- a/flask/app/static/css/style.css
+++ b/flask/app/static/css/style.css
@@ -2,6 +2,12 @@
   font-size: 18px;
 }
 
+.plot_name {
+  white-space: normal;
+  font-size: medium;
+  text-align: center;
+}
+
 .main_text {
   font-size: 25px
 }
