--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -68,9 +68,16 @@
       </div>
     </div>
     <div class="w3-col w3-row w3-padding-24 w3-section">
-      <p class="w3-col w3-strong main_text w3-padding-12 w3-section">{{mutation_info_header}}</p>
       <div class="w3-col w3-row w3-light-green w3-section w3-round-large">
         <div class="w3-row w3-col l3">
+          <div class="w3-section w3-padding-24 w3-col">
+            <p class="w3-strong w3-margin w3-margin-top w3-margin-bottom text">
+              {{date_slider_text}}
+            </p>
+            <div class="w3-container w3-padding w3-col">
+              <div id="dateRangeSlider"></div>
+            </div>
+          </div>
           <div class="w3-section w3-padding-24 w3-col">
             <div onclick="home()" class="w3-border w3-padding-24 w3-button w3-theme-d5 w3-hover-blue w3-col further_information" id="homeButton">
               <p class="w3-center" style="display:inline;"> {{home_button_text}} </p>
@@ -79,7 +86,7 @@
               <p style="display:inline;"> {{mutation_button_text}} </p>
             </div>
           </div>
-          <div class="w3-section w3-padding-24 w3-col" id="certainMutationSection">
+          <div class="w3-section w3-padding-24 w3-col certainMutationSection">
             <div class="w3-section w3-padding-24 w3-col">
               <p class="w3-strong w3-margin text">
                 {{variables_text}}
@@ -139,24 +146,24 @@
               </div>
             </div>
           </div>
-          <div class="w3-section w3-padding-24 w3-col">
-            <p class="w3-strong w3-margin w3-margin-top w3-margin-bottom text">
-              {{date_slider_text}}
-            </p>
-            <div class="w3-container w3-padding w3-col">
-              <div id="dateRangeSlider"></div>
-            </div>
-          </div>
           <div class="w3-border w3-margin w3-btn w3-black my-btn w3-col" style="min-width: 90%" id="update">
             <p>{{update_button_text}}</p>
           </div>
         </div>
         <div class="w3-col l9">
-          <div>
+          <div class="certainMutationSection">
             <div>
+              <p class="plot_name">{{map_name_text}} {{mutation}}</p>
               <div id="coronamap"></div>
             </div>
+          </div>
+          <div class="homeSection">
             <div>
+              <p class="plot_name">{{main_map_name_text}}</p>
+              <div id="maincoronamap"></div>
+            </div>
+            <div>
+              <p class="plot_name">{{plot_name_text}}</p>
               <div id="coronaplot"></div>
             </div>
           </div>
