--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -154,16 +154,28 @@
           <div class="certainMutationSection">
             <div>
               <p class="plot_name">{{map_name_text}} {{mutation}}</p>
+              <div id="coronamapLoader" class="w3-white loader">
+                <span class="helper"></span>
+                <img src="/static/img/Coronavirus.gif" class="center">
+              </div>
               <div id="coronamap"></div>
             </div>
           </div>
           <div class="homeSection">
             <div>
               <p class="plot_name">{{main_map_name_text}}</p>
+              <div id="maincoronamapLoader" class="w3-white loader">
+                <span class="helper"></span>
+                <img src="/static/img/Coronavirus.gif" class="center">
+              </div>
               <div id="maincoronamap"></div>
             </div>
             <div>
               <p class="plot_name">{{plot_name_text}}</p>
+              <div id="coronaplotLoader" class="w3-white loader">
+                <span class="helper"></span>
+                <img src="/static/img/Coronavirus.gif" class="center">
+              </div>
               <div id="coronaplot"></div>
             </div>
           </div>
