Taksa loading gif added

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -156,7 +156,7 @@
               <p class="plot_name">{{map_name_text}} {{mutation}}</p>
               <div id="coronamapLoader" class="w3-white loader">
                 <span class="helper"></span>
-                <img src="/static/img/Coronavirus.gif" class="center">
+                <img src="/static/img/Taksa.gif" class="center">
               </div>
               <div id="coronamap"></div>
             </div>
@@ -166,7 +166,7 @@
               <p class="plot_name">{{main_map_name_text}}</p>
               <div id="maincoronamapLoader" class="w3-white loader">
                 <span class="helper"></span>
-                <img src="/static/img/Coronavirus.gif" class="center">
+                <img src="/static/img/Taksa.gif" class="center">
               </div>
               <div id="maincoronamap"></div>
             </div>
@@ -174,7 +174,7 @@
               <p class="plot_name">{{plot_name_text}}</p>
               <div id="coronaplotLoader" class="w3-white loader">
                 <span class="helper"></span>
-                <img src="/static/img/Coronavirus.gif" class="center">
+                <img src="/static/img/Taksa.gif" class="center">
               </div>
               <div id="coronaplot"></div>
             </div>
