--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -70,7 +70,7 @@
     <div class="w3-col w3-row w3-padding-24 w3-section">
       <div class="w3-col w3-row w3-light-green w3-section w3-round-large">
         <div class="w3-row w3-col l3">
-          <div class="w3-section w3-padding-24 w3-col">
+          <div class="w3-section w3-padding w3-col">
             <p class="w3-strong w3-margin w3-margin-top w3-margin-bottom text">
               {{date_slider_text}}
             </p>
@@ -78,7 +78,7 @@
               <div id="dateRangeSlider"></div>
             </div>
           </div>
-          <div class="w3-section w3-padding-24 w3-col">
+          <div class="w3-col">
             <div onclick="home()" class="w3-border w3-padding-24 w3-button w3-theme-d5 w3-hover-blue w3-col further_information" id="homeButton">
               <p class="w3-center" style="display:inline;"> {{home_button_text}} </p>
             </div>
@@ -86,8 +86,8 @@
               <p style="display:inline;"> {{mutation_button_text}} </p>
             </div>
           </div>
-          <div class="w3-section w3-padding-24 w3-col certainMutationSection">
-            <div class="w3-section w3-padding-24 w3-col">
+          <div class="w3-section w3-col certainMutationSection">
+            <div class="w3-section w3-padding w3-col">
               <p class="w3-strong w3-margin text">
                 {{variables_text}}
               </p>
@@ -140,19 +140,19 @@
                 </div>
               </div>
             </div>
-            <div class="w3-section w3-padding-24 w3-col">
-              <div onclick="outbreakInfoLink('{{outbreak_info_link}}')" class="w3-margin w3-btn w3-col further_information w3-theme-d5 my-btn" id="updateDate">
-                <p style="display:inline;">{{further_information_text}} {{mutation}}  {{resourses_text}}</p>
-              </div>
-            </div>
           </div>
           <div class="w3-border w3-margin w3-btn w3-black my-btn w3-col" style="min-width: 90%" id="update">
             <p>{{update_button_text}}</p>
           </div>
+          <div class="w3-section w3-col certainMutationSection">
+            <div onclick="outbreakInfoLink('{{outbreak_info_link}}')" class="w3-margin w3-btn w3-col further_information w3-theme-d5 my-btn" id="updateDate">
+              <p style="display:inline;">{{further_information_text}} {{mutation}}  {{resourses_text}}</p>
+            </div>
+          </div>
         </div>
         <div class="w3-col l9">
           <div class="certainMutationSection">
-            <div>
+            <div class="w3-padding">
               <p class="plot_name">{{map_name_text}} {{mutation}}</p>
               <div id="coronamapLoader" class="w3-white loader">
                 <span class="helper"></span>
@@ -162,7 +162,7 @@
             </div>
           </div>
           <div class="homeSection">
-            <div>
+            <div class="w3-padding">
               <p class="plot_name">{{main_map_name_text}}</p>
               <div id="maincoronamapLoader" class="w3-white loader">
                 <span class="helper"></span>
@@ -170,7 +170,7 @@
               </div>
               <div id="maincoronamap"></div>
             </div>
-            <div>
+            <div class="w3-padding">
               <p class="plot_name">{{plot_name_text}}</p>
               <div id="coronaplotLoader" class="w3-white loader">
                 <span class="helper"></span>
